# geospaNN

./: .gitignore  .pypirc  Example.ipynb  Example_linear.md  Example_realdata.ipynb  Example_realdata.md  Example_simulation.html  Example_simulation.ipynb  Example_simulation.md  LICENSE  README.md  Running_time.ipynb  Running_time.md  Untitled.ipynb  environment.yml  github  github.pub  pyproject.toml  running_time.csv  setup.py
.ipynb_checkpoints/: Example-checkpoint.ipynb  Example_linear-checkpoint.ipynb  Example_linear-checkpoint.md  Example_realdata-checkpoint.ipynb  Example_simulation-checkpoint.ipynb  Example_simulation-checkpoint.md  Running_time-checkpoint.ipynb
data/: Normalized_PM2.5_20190605.csv  Raw_PM2.5_20190605.csv  Raw_PM2.5_20220618.csv  covariate0618.csv  pm25_0618.csv
geoNets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geospaNN/: PDP.py  R.py  __init__.py  main.py  model.py  utils.py  visualize.py
geospaNN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
joss/: paper.bib  paper.md  script.md
nngls/: __init__.py  main.py  utils.py  utils_old.py
nngls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyNNGLS/: model.py  utils.py
pyNNGLS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/NN-GLS/: utils.py
tests/: test.py  test_optim.py  test_sim.py
vignette/: vignette.Rmd
