[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geospaNN"
version = "0.1.7"
authors = [
  { name="Wentao Zhan", email="wzhan3@jhu.edu" },
    { name="Abhirup Datta", email="abhidatta@jhu.edu" }
]
maintainers = [
    { name="Wentao Zhan", email="wzhan3@jhu.edu" },
]
description = "A PyThon implementation of NNGLS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy', 'scipy', 'scikit-learn', 'rpy2',
    'torch>=2.0.0',
    'torch_sparse>=0.6.18',
    'torch_scatter>=2.1.2',
    'torch_geometric>=2.3.0',
    'matplotlib'
]

[project.urls]
Homepage = "https://wentaozhan1998.github.io/geospaNN-doc"
Repository = "https://github.com/WentaoZhan1998/geospaNN"
Issues = "https://github.com/WentaoZhan1998/geospaNN/issues"